This version adds all the bases for all the pages. There are some look and feel tweaks, the contact page functionality, and tons of content required

--- a/website/static/services.css
+++ b/website/static/services.css
@@ -89,6 +89,17 @@
   height: 150px;
 }
 
+.services_tech_icon_android {
+  background:url("images/icon_Android.png") no-repeat;
+  width: 200px;
+  height: 150px;
+}
+
+.services_tech_icon_qt {
+  background:url("images/icon_Qt.png") no-repeat;
+  width: 200px;
+  height: 150px;
+}
 
 .services_tech_title {
 }
