--- a/website/static/share.css
+++ b/website/static/share.css
@@ -85,6 +85,48 @@
   font-size: 14px;
 }
 
+.siderail {
+  float: right;
+}
+
+.siderail_image {
+  background:url("images/people.png");
+  width: 212px;
+  height: 184px;
+  position: relative;
+}
+
+.siderail_body {
+  width: 280px;
+  height: 150px;
+  position: relative;
+  z-index: 1;
+}
+
+.siderail_title {
+  background:url("images/bg_RightRailContent_TitleBar.png");
+  width: 250px;
+  margin-left: -20px;
+  margin-top: -120px;
+  padding-left: 30px;
+  position: relative;
+  z-index: 2;
+}
+
+.siderail_text_area {
+  background:url("images/bg_RightRailContent_Body.png");
+  margin-left; 20px;
+  width: 240px;
+  height: 150px;
+  position: relative;
+}
+
+.siderail_text {
+  padding-top: 60px;
+  padding-left: 10px;
+  position: relative;
+}
+
 .footer_swish {
   background:url("images/bg_Content_Swoosh.png");
   margin-left: 119px;
