The website is now ready for uploading. Most of the content is in there, however not ready.

--- a/website/static/contact.css
+++ b/website/static/contact.css
@@ -92,3 +92,9 @@
 .contact_info_item {
   float: left;
 }
+
+.contact_thank_you {
+  font-family: ExoRegular, verdana, helvetica, sans-serif;  
+  font-size: 36px;
+  color: #009996;
+}
